name:                reflex-bulma
version:             0.1.0
synopsis:            Simple project template from stack
description:         Please see README.md
-- homepage:            https://github.com/githubuser/heroku-comment#readme
license:             GPL-3
license-file:        LICENSE
author:              Adrian Parvin D. Ouano
maintainer:          adrianparvino@gmail.com
copyright:           2017 Adrian Parvin D. Ouano
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base               >= 4.7 && < 5
                     , containers         == 0.5.*
                     , text               == 1.2.*
                     , lens               == 4.15.*
                     , reflex             == 0.5.*
                     , reflex-dom         == 0.4.*
                     , reflex-dom-contrib == 0.5.*
                     , font-awesome-type  == 0.1.*
  exposed-modules:     Reflex.Bulma
  other-modules:       Reflex.Bulma.Elements
                     , Reflex.Bulma.Grid
                     , Reflex.Bulma.Components
                     , Reflex.Bulma.Internal
